Fix wordbreak in links
Fix word break in links

--- a/bootstrap-4.1.3-dist/css/custom.css
+++ b/bootstrap-4.1.3-dist/css/custom.css
@@ -366,6 +366,7 @@ svg {
 }
 .links {
     font-size: 18px;
+    word-wrap: break-word;
 }
 /*Contact*/
 
